--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,8 +24,9 @@ jobs:
           - { os: ubuntu-latest,  ghc: "8.8.4"  }
           - { os: ubuntu-latest,  ghc: "8.10.7" }
           - { os: ubuntu-latest,  ghc: "9.0.2"  }
-          - { os: ubuntu-latest,  ghc: "9.2.4"  }
-          - { os: ubuntu-latest,  ghc: "9.4.1"  }
+          - { os: ubuntu-latest,  ghc: "9.2.7"  }
+          - { os: ubuntu-latest,  ghc: "9.4.4"  }
+          - { os: ubuntu-latest,  ghc: "9.6.1"  }
           # MacOS
           - { os: macOS-latest,  ghc: "8.0.2"  }
           - { os: macOS-latest,  ghc: "8.2.2"  }
@@ -34,8 +35,9 @@ jobs:
           - { os: macOS-latest,  ghc: "8.8.4"  }
           - { os: macOS-latest,  ghc: "8.10.7" }
           - { os: macOS-latest,  ghc: "9.0.2"  }
-          - { os: macOS-latest,  ghc: "9.2.4"  }
-          - { os: macOS-latest,  ghc: "9.4.1"  }
+          - { os: macOS-latest,  ghc: "9.2.7"  }
+          - { os: macOS-latest,  ghc: "9.4.4"  }
+          - { os: macOS-latest,  ghc: "9.6.1"  }
           # Windows
           - { os: windows-latest,  ghc: "8.0.2"  }
           - { os: windows-latest,  ghc: "8.2.2"  }
@@ -44,8 +46,9 @@ jobs:
           - { os: windows-latest,  ghc: "8.8.4"  }
           - { os: windows-latest,  ghc: "8.10.7" }
           - { os: windows-latest,  ghc: "9.0.2"  }
-          - { os: windows-latest,  ghc: "9.2.4"  }
-          - { os: windows-latest,  ghc: "9.4.1"  }
+          - { os: windows-latest,  ghc: "9.2.7"  }
+          - { os: windows-latest,  ghc: "9.4.4"  }
+          - { os: windows-latest,  ghc: "9.6.1"  }
     steps:
     - uses: actions/checkout@v3
 
@@ -58,7 +61,7 @@ jobs:
     - name: Update cabal package database
       run: cabal update
 
-    - uses: actions/cache@v2
+    - uses: actions/cache@v3
       name: Cache cabal stuff
       with:
         path: |
@@ -81,7 +84,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        resolver: [nightly, lts-19, lts-18, lts-16, lts-14, lts-12, lts-11]
+        resolver: [nightly, lts-20, lts-19, lts-18, lts-16, lts-14, lts-12, lts-11]
         include:
           - resolver: lts-11
             ghc: 8.2.2
@@ -100,6 +103,9 @@ jobs:
           - resolver: lts-19
             ghc: 9.0.2
             stack-yaml: stack.yaml
+          - resolver: lts-20
+            ghc: 9.2.7
+            stack-yaml: stack.yaml
           - resolver: nightly
             stack-yaml: stack.yaml
           # Latest stable for MacOS: ghc-8.8.4
@@ -113,7 +119,7 @@ jobs:
     env:
       STACK_YAML: stack.yaml
       STACK_ARGS: '--resolver ${{ matrix.resolver }} --system-ghc'
-      cache-version: v4 # bump up this version to invalidate currently stored cache
+      cache-version: v5 # bump up this version to invalidate currently stored cache
     steps:
     - uses: actions/checkout@v3
 
@@ -124,11 +130,11 @@ jobs:
         ghc-version: ${{ matrix.ghc }}
         enable-stack: true
         stack-version: 'latest'
-        cabal-version: '3.6'
+        cabal-version: '3.10'
 
     - name: Cache
       id: cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: |
           ~/.stack
@@ -148,7 +154,7 @@ jobs:
 
     - name: Windows Cache
       id: cache-windows
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       if: matrix.os == 'windows-latest'
       with:
         path: |
