--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,8 +47,9 @@ jobs:
           - { cabal: "3.6", os: windows-latest,  ghc: "9.0.2"  }
           - { cabal: "3.6", os: windows-latest,  ghc: "9.2.2"  }
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-haskell@v1
+    - uses: actions/checkout@v3
+
+    - uses: haskell-actions/setup@v2
       id: setup-haskell-cabal
       with:
         ghc-version: ${{ matrix.ghc }}
@@ -113,8 +114,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: haskell/actions/setup@v1
-      id: setup-haskell-cabal
+    - uses: haskell-actions/setup@v2
+      id: setup-haskell-stack
       name: Setup Haskell
       with:
         ghc-version: ${{ matrix.ghc }}
