Add compatibility with recently added `ByteArray` to `base`:
* Switch to using `ByteArray` for type class implementation instead of
  `ShortByteString`
* Add `unsafeUniformFillMutableByteArray` to `RandomGen` and a helper function
  `defaultUnsafeUniformFillMutableByteArray` that makes implementation
  for most instances easier.
* Add `uniformByteArray`, `uniformByteString` and `uniformFillMutableByteArray`
* Add `uniformByteArrayM` to `StatefulGen`
* Add `uniformByteStringM` and `uniformShortByteStringM`
* Deprecate `uniformShortByteString` in favor of `uniformShortByteStringM` for
  consistent naming and a future plan of removing it from `StatefulGen`
  type class
* Expose a helper function `genByteArrayST`, that can be used for
  defining implementation for `uniformByteArrayM`

--- a/random.cabal
+++ b/random.cabal
@@ -100,6 +100,8 @@ library
         deepseq >=1.1 && <2,
         mtl >=2.2 && <2.4,
         splitmix >=0.1 && <0.2
+    if impl(ghc < 9.4)
+      build-depends: data-array-byte
 
 test-suite legacy-test
     type:             exitcode-stdio-1.0
