--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,7 +108,7 @@ jobs:
             stack-yaml: stack-old.yaml
           - resolver: lts-18
             ghc: '8.10.7'
-            stack-yaml: stack.yaml
+            stack-yaml: stack.lts-18.yaml
           - resolver: lts-19
             ghc: '9.0.2'
             stack-yaml: stack-coveralls.yaml
@@ -271,8 +271,10 @@ jobs:
         githubToken: ${{ github.token }}
         install: |
           apt-get update -y
-          apt-get install -y ghc libghc-tasty-smallcheck-dev libghc-tasty-hunit-dev libghc-splitmix-dev curl
+          apt-get install -y git ghc libghc-tasty-smallcheck-dev libghc-tasty-hunit-dev libghc-splitmix-dev curl
         run: |
+          git clone https://github.com/Bodigrim/data-array-byte
+          cp -r data-array-byte/Data .
           ghc --version
           ghc --make -isrc:test-legacy -o legacy test-legacy/Legacy.hs
           ./legacy
