Add some property tests for new Seed functionality

--- a/random.cabal
+++ b/random.cabal
@@ -132,6 +132,7 @@ test-suite spec
     other-modules:
         Spec.Range
         Spec.Run
+        Spec.Seed
         Spec.Stateful
 
     default-language: Haskell2010
