--- a/random.cabal
+++ b/random.cabal
@@ -117,7 +117,7 @@ test-suite legacy-test
         RangeTest
 
     default-language: Haskell2010
-    ghc-options:      -with-rtsopts=-M9M
+    ghc-options:      -rtsopts -with-rtsopts=-M9M
     if impl(ghc >= 8.0)
         ghc-options:
             -Wno-deprecations
