Update matrix for stack and cabal

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,8 +31,9 @@ jobs:
           - { os: ubuntu-latest,  ghc: "9.0.2"  }
           - { os: ubuntu-latest,  ghc: "9.2.8"  }
           - { os: ubuntu-latest,  ghc: "9.4.8"  }
-          - { os: ubuntu-latest,  ghc: "9.6.4"  }
-          - { os: ubuntu-latest,  ghc: "9.8.1"  }
+          - { os: ubuntu-latest,  ghc: "9.6.6"  }
+          - { os: ubuntu-latest,  ghc: "9.8.2"  }
+          - { os: ubuntu-latest,  ghc: "9.10.1"  }
           # MacOS
           - { os: macOS-latest,  ghc: "8.0.2"  }
           - { os: macOS-latest,  ghc: "8.2.2"  }
@@ -43,8 +44,9 @@ jobs:
           - { os: macOS-latest,  ghc: "9.0.2"  }
           - { os: macOS-latest,  ghc: "9.2.8"  }
           - { os: macOS-latest,  ghc: "9.4.8"  }
-          - { os: macOS-latest,  ghc: "9.6.4"  }
-          - { os: macOS-latest,  ghc: "9.8.1"  }
+          - { os: macOS-latest,  ghc: "9.6.6"  }
+          - { os: macOS-latest,  ghc: "9.8.2"  }
+          - { os: macOS-latest,  ghc: "9.10.1"  }
           # Windows
           - { os: windows-latest,  ghc: "8.0.2"  }
           - { os: windows-latest,  ghc: "8.2.2"  }
@@ -55,8 +57,9 @@ jobs:
           - { os: windows-latest,  ghc: "9.0.2"  }
           - { os: windows-latest,  ghc: "9.2.8"  }
           - { os: windows-latest,  ghc: "9.4.8"  }
-          - { os: windows-latest,  ghc: "9.6.4"  }
-          - { os: windows-latest,  ghc: "9.8.1"  }
+          - { os: windows-latest,  ghc: "9.6.6"  }
+          - { os: windows-latest,  ghc: "9.8.2"  }
+          - { os: windows-latest,  ghc: "9.10.1"  }
     steps:
     - uses: actions/checkout@v3
 
@@ -119,20 +122,40 @@ jobs:
             ghc: '9.4.8'
             stack-yaml: stack.yaml
           - resolver: lts-22
-            ghc: '9.6.4'
+            ghc: '9.6.6'
             stack-yaml: stack.yaml
           - resolver: nightly
             stack-yaml: stack.yaml
-          # Latest stable for MacOS: ghc-8.8.4
-          - resolver: lts-16
+          # MacOS-latest
+          - resolver: lts-20
             os: macos-latest
-            ghc: '8.8.4'
-            stack-yaml: stack-old.yaml
-          # Latest stable for Windows: ghc-8.6.4
+            ghc: '9.2.8'
+            stack-yaml: stack.yaml
+          - resolver: lts-21
+            os: macos-latest
+            ghc: '9.4.8'
+            stack-yaml: stack.yaml
+          - resolver: lts-22
+            os: macos-latest
+            ghc: '9.6.6'
+            stack-yaml: stack.yaml
+          # Windows-latest
           - resolver: lts-14
             os: windows-latest
             ghc: '8.6.5'
             stack-yaml: stack-old.yaml
+          - resolver: lts-20
+            os: windows-latest
+            ghc: '9.2.8'
+            stack-yaml: stack.yaml
+          - resolver: lts-21
+            os: windows-latest
+            ghc: '9.4.8'
+            stack-yaml: stack.yaml
+          - resolver: lts-22
+            os: windows-latest
+            ghc: '9.6.6'
+            stack-yaml: stack.yaml
     env:
       STACK_YAML: '${{ matrix.stack-yaml }}'
       STACK_ARGS: '--resolver ${{ matrix.resolver }} --system-ghc'
