Extract all array helper functionality into its own internal module

--- a/random.cabal
+++ b/random.cabal
@@ -88,6 +88,7 @@ library
         System.Random.Seed
         System.Random.Stateful
     other-modules:
+        System.Random.Array
         System.Random.GFinite
 
     hs-source-dirs:   src
