--- a/random.cabal
+++ b/random.cabal
@@ -131,17 +131,7 @@ test-suite doctests
     main-is:          doctests.hs
     hs-source-dirs:   test
     default-language: Haskell2010
-    build-depends:
-        base,
-        doctest >=0.15 && <0.23
-    if impl(ghc >= 8.2) && impl(ghc < 8.10)
-        build-depends:
-            mwc-random >=0.13 && <0.16,
-            primitive >=0.6 && <0.8,
-            random,
-            stm,
-            unliftio >=0.2 && <0.3,
-            vector >= 0.10 && <0.14
+    build-depends:    base
 
 test-suite spec
     type:             exitcode-stdio-1.0
