--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -102,11 +102,12 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        resolver: [nightly, lts-22, lts-21, lts-20, lts-19, lts-18, lts-16, lts-14, lts-12, lts-11]
+        resolver: [nightly, lts-22, lts-21, lts-20, lts-19, lts-18, lts-16, lts-14, lts-12, lts-11, lts-9]
         include:
+          - resolver: lts-9
+            stack-yaml: stack-custom.yaml
           - resolver: lts-11
-            ghc: '8.2.2'
-            stack-yaml: stack-old.yaml
+            stack-yaml: stack-custom.yaml
           - resolver: lts-12
             ghc: '8.4.4'
             stack-yaml: stack-old.yaml
@@ -165,7 +166,7 @@ jobs:
             stack-yaml: stack.yaml
     env:
       STACK_YAML: '${{ matrix.stack-yaml }}'
-      STACK_ARGS: '--resolver ${{ matrix.resolver }} --system-ghc'
+      STACK_ARGS: '--resolver ${{ matrix.resolver }}'
       cache-version: v5 # bump up this version to invalidate currently stored cache
     steps:
     - uses: actions/checkout@v4
@@ -176,7 +177,7 @@ jobs:
       with:
         ghc-version: ${{ matrix.ghc }}
         enable-stack: true
-        stack-version: ${{ matrix.resolver == 'lts-11' && '2.15.5' || 'latest' }}
+        stack-version: ${{ (matrix.resolver == 'lts-9' || matrix.resolver == 'lts-11') && '2.15.5' || 'latest' }}
 
     - name: Cache
       id: cache
