Disable older ghc test with cabal. ghcup is failing to install ghc

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,8 +22,9 @@ jobs:
       matrix:
         include:
           # Linux
-          - { os: ubuntu-latest,  ghc: "8.0.2"  }
-          - { os: ubuntu-latest,  ghc: "8.2.2"  }
+           # haskell-actions/setup is having trouble installing from hvr/ppa for ghc-8.0 and 8.2
+          # - { os: ubuntu-latest,  ghc: "8.0.2"  }
+          # - { os: ubuntu-latest,  ghc: "8.2.2"  }
           - { os: ubuntu-latest,  ghc: "8.4.4"  }
           - { os: ubuntu-latest,  ghc: "8.6.5"  }
           - { os: ubuntu-latest,  ghc: "8.8.4"  }
@@ -35,8 +36,8 @@ jobs:
           - { os: ubuntu-latest,  ghc: "9.8.2"  }
           - { os: ubuntu-latest,  ghc: "9.10.1"  }
           # MacOS
-          - { os: macOS-latest,  ghc: "8.0.2"  }
-          - { os: macOS-latest,  ghc: "8.2.2"  }
+          # - { os: macOS-latest,  ghc: "8.0.2"  }
+          # - { os: macOS-latest,  ghc: "8.2.2"  }
           - { os: macOS-latest,  ghc: "8.4.4"  }
           - { os: macOS-latest,  ghc: "8.6.5"  }
           - { os: macOS-latest,  ghc: "8.8.4"  }
@@ -48,8 +49,8 @@ jobs:
           - { os: macOS-latest,  ghc: "9.8.2"  }
           - { os: macOS-latest,  ghc: "9.10.1"  }
           # Windows
-          - { os: windows-latest,  ghc: "8.0.2"  }
-          - { os: windows-latest,  ghc: "8.2.2"  }
+          # - { os: windows-latest,  ghc: "8.0.2"  }
+          # - { os: windows-latest,  ghc: "8.2.2"  }
           - { os: windows-latest,  ghc: "8.4.4"  }
           - { os: windows-latest,  ghc: "8.6.5"  }
           - { os: windows-latest,  ghc: "8.8.4"  }
