Make benchmark compatible with older primitive
This is necessary to allow testing with lts-9 snapshot, since stack is
still capable of installing ghc-8.0 and ghc-8.2, while ghcup is having
issues in achieving that on CI

--- a/random.cabal
+++ b/random.cabal
@@ -201,7 +201,7 @@ benchmark bench
     build-depends:
         base,
         mtl,
-        primitive >= 0.7.1,
+        primitive,
         random,
         splitmix >=0.1 && <0.2,
         tasty-bench
