--- a/random.cabal
+++ b/random.cabal
@@ -192,7 +192,7 @@ benchmark bench
     build-depends:
         base,
         mtl,
-        primitive >= 0.7.1,
+        primitive,
         random,
         splitmix >=0.1 && <0.2,
         tasty-bench
