--- a/random.cabal
+++ b/random.cabal
@@ -122,7 +122,7 @@ test-suite legacy-test
         ghc-options:
             -Wno-deprecations
     build-depends:
-        base,
+        base >=4.8 && <5,
         containers >=0.5 && <0.8,
         random
 
@@ -131,7 +131,8 @@ test-suite doctests
     main-is:          doctests.hs
     hs-source-dirs:   test
     default-language: Haskell2010
-    build-depends:    base
+    build-depends:
+        base >=4.8 && <5
 
 test-suite spec
     type:             exitcode-stdio-1.0
@@ -145,7 +146,7 @@ test-suite spec
     default-language: Haskell2010
     ghc-options:      -Wall
     build-depends:
-        base,
+        base >=4.8 && <5,
         bytestring,
         random,
         smallcheck >=1.2 && <1.3,
@@ -164,7 +165,7 @@ test-suite spec-inspection
     default-language: Haskell2010
     ghc-options:      -Wall
     build-depends:
-        base,
+        base >=4.8 && <5,
         random,
         tasty >=1.0 && <1.6
     if impl(ghc >= 8.0)
@@ -186,7 +187,7 @@ benchmark legacy-bench
             -Wno-deprecations
 
     build-depends:
-        base,
+        base >=4.8 && <5,
         random,
         rdtsc,
         split >=0.2 && <0.3,
@@ -199,7 +200,7 @@ benchmark bench
     default-language: Haskell2010
     ghc-options:      -Wall -O2
     build-depends:
-        base,
+        base >=4.8 && <5,
         mtl,
         primitive,
         random,
