Add fourmolu to CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -309,3 +309,28 @@ jobs:
           ./legacy
           ghc --make -isrc:test -o spec test/Spec.hs
           ./spec
+  fourmolu:
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        shell: bash
+
+    strategy:
+      fail-fast: false
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install fourmolu
+      run: |
+        FOURMOLU_VERSION="0.18.0.0"
+        BINDIR=$HOME/.local/bin
+        mkdir -p "$BINDIR"
+        curl -sSfL "https://github.com/fourmolu/fourmolu/releases/download/v${FOURMOLU_VERSION}/fourmolu-${FOURMOLU_VERSION}-linux-x86_64" -o "$BINDIR/fourmolu"
+        chmod a+x "$BINDIR/fourmolu"
+        echo "$BINDIR" >> $GITHUB_PATH
+
+    - name: Run fourmolu
+      run: ./scripts/fourmolize.sh
+
